add(document): remove unused import